bluec-tests/tests/invalid/expr_alignof/alignof_void_array2.c
int main(void) {
    return _Alignof(void[0]);
}